# weni-cli-backend

./: .coveragerc  .dockerignore  .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: build-pish-tag.yaml  build-push-tag.yaml  ci.yaml
app/: __init__.py  main.py  server.py
app/api/: __init__.py
app/api/v1/: __init__.py  middlewares.py  middlewares_test.py  routes.py
app/api/v1/models/: __init__.py  requests.py
app/api/v1/routers/: __init__.py  active_runs.py  agents.py  channels.py  evaluations.py  health.py  passive_runs.py  permissions.py  runs.py  tool_logs.py
app/api/v1/routers/tests/: conftest.py  test_active_runs.py  test_agents.py  test_channels.py  test_evaluations.py  test_health.py  test_passive_runs.py  test_permissions.py  test_runs.py  test_tool_logs.py
app/api/v1/tests/: test_middlewares.py
app/clients/: __init__.py  connect_client.py  flows_client.py  gallery_client.py  nexus_client.py  weni_client.py
app/clients/aws/: __init__.py  agents_client.py  lambda_client.py  logs_client.py
app/clients/aws/tests/: test_lambda_client.py  test_logs_client.py
app/clients/tests/: __init__.py  test_connect_client.py  test_flows_client.py  test_gallery_client.py  test_nexus_client.py  test_weni_client.py
app/core/: __init__.py  config.py  response.py
app/core/tests/: __init__.py  test_response.py
app/services/: __init__.py  jwt_generator.py
app/services/agents/: configurators.py
app/services/agents/active/: configurator.py  models.py  processor.py
app/services/agents/active/templates/: lambda_function.py.template
app/services/agents/active/tests/: test_active_configurator.py  test_processor.py
app/services/agents/passive/: configurator.py
app/services/agents/passive/tests/: test_passive_configurator.py
app/services/package/: __init__.py  package.py
app/services/runs/: __init__.py  active_strategy.py  tool_strategy.py
app/services/runs/tests/: test_active_strategy.py
app/services/skill/: __init__.py  packager.py  validator.py
app/services/skill/templates/: lambda_function.py.template
app/services/skill/tests/: __init__.py  test_packager.py  test_validator.py
app/services/tests/: test_jwt_generator.py
app/services/tool/: __init__.py  packager.py  validator.py
app/services/tool/templates/: lambda_function.py.template
app/services/tool/tests/: __init__.py  test_packager.py  test_validator.py
app/services/tool/tests/templates/: test_lambda_function.py.template
app/tests/: README.md  __init__.py  test_gallery_mock.py  test_utils.py  utils.py
docker/: Dockerfile  Dockerfile.dev  docker-entrypoint.sh
tests/: __init__.py
tests/api/: __init__.py
tests/api/v1/: __init__.py
tests/api/v1/routers/: __init__.py  test_health.py
